--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta name="theme-color" content="#000000"/><title>React Clock</title><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/><link rel="shortcut icon" href="/react-digital-and-analog-clock/clock.svg"/><meta name="description" content="This is an beginner level program of digital and analog clock using hooks in react"/><script defer="defer" src="/react-digital-and-analog-clock/static/js/main.51767999.js"></script><link href="/react-digital-and-analog-clock/static/css/main.22586914.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html><html lang="en">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4J64SC1QY7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-4J64SC1QY7');
+  </script>
+  <!--Google verification--->
+  <meta name="google-site-verification" content="5QsjbXuM1buDwEtnxWDKN9dE1qgf_dgz646EdwUxSWg" />
+  
+  <head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta name="theme-color" content="#000000"/><title>React Clock</title><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/><link rel="shortcut icon" href="/react-digital-and-analog-clock/clock.svg"/><meta name="description" content="This is an beginner level program of digital and analog clock using hooks in react"/><script defer="defer" src="/react-digital-and-analog-clock/static/js/main.51767999.js"></script><link href="/react-digital-and-analog-clock/static/css/main.22586914.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
